# cerberus

./: LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
sentiment-analysis/: app.py
sentiment-analysis/models/: fine_tune_sentiment.py
summarization/: Dockerfile  app.py
summarization/models/: fine_tune_summarization.py
text-generation/: app.py
text-generation/models/: fine_tune_text_generation.py
